--- a/.github/workflows/TaskMAPI.yml
+++ b/.github/workflows/TaskMAPI.yml
@@ -1,10 +1,10 @@
-name: Build and deploy .NET Core application to Web App taskmanagerstandalone
+name: Build and deploy .NET Core application to Web App TaskMAPI
 on:
   push:
     branches:
     - main
 env:
-  AZURE_WEBAPP_NAME: taskmanagerstandalone
+  AZURE_WEBAPP_NAME: TaskMAPI
   AZURE_WEBAPP_PACKAGE_PATH: TaskManagementAPI\published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 8.0.x
@@ -44,5 +44,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.taskmanagerstandalone_4609 }}
+        publish-profile: ${{ secrets.TaskMAPI_96E6 }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
